Fix uneven spacing on nav and page

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@ html {
   font-family: "Avenir", "Helvetica", sans-serif;
   height: 100%;
   width: 100%;
+  padding: 0;
+  margin: 0;
   background-color: #f7f7f7;
   color: #393E41;
 }
@@ -31,12 +33,17 @@ nav {
   letter-spacing: 4px;
   text-align: center;
   color: #d8d8d8;
+  width: 100%;
 }
 
 .nav-link {
-  padding: 15px;
+  padding: 30px 30px 30px 0;
   text-decoration: none;
   font-weight: bold;
+}
+
+.last {
+  padding-right: 0;
 }
 
 .nav-link:hover {
@@ -77,8 +84,8 @@ nav {
 
 .logo {
   vertical-align: middle;
-  max-height: 1em;
-  max-width: 1em;
+  max-height: 16px;
+  max-width: 16px;
   margin-right: 5px;
 }
 
@@ -117,7 +124,7 @@ nav {
 
 /* Footer */
 footer {
-  padding: 20px;
+  padding: 20px 0;
   width: 100%;
   background-color: #eaeaea;
   text-align: center;
